--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 This purpose of this simple application is to demonstate Java Server Page's (JSP) support for internationalization.
 
-JSP accomplishes this through the "fmt" tag library, and resource language bundle files. For an example of how the "fmt" tag library is used, see the index.jsp file included with this demo.  The language bundle files contain propeties definitions for a specific language.  These files are maintained in a resources director that gets packaged in the .war file for a Java web application.  There should be a separate file for each language that a Java web application needs to support.  Also, each of these properties files should contain a complete set of all the properties used by the application, and each property should have an appropriate utf8 translation for each property in the language the properties file is named for.
+JSP accomplishes this through the "fmt" tag library, and resource language bundle files. For an example of how the "fmt" tag library is used, see the index.jsp file included with this demo.  The language bundle files contain propeties definitions for a specific language.  These files are maintained in a resources directory that gets packaged in the .war file for a Java web application.  There should be a separate file for each language that a Java web application needs to support.  Also, each of these properties files should contain a complete set of all the properties used by the application, and each property should have an appropriate utf8 translation for each property in the language the properties file is named for.
 
-All of these properties files should have the same root file name.  For example: OrderResources.properties could be usd for a root filename, and this would contain the default language properties for the application.  All other language properties file would need to have a language suffix added for the language translations they include.  For example, the Germain properties file would be named OrderResources_de_DE.properties, and the French language file would be named OrderResources_fr_FR.properties.
+All of these properties files should have the same root file name.  For example: OrderResources.properties could be used for a root filename, and this would contain the default language properties for the application.  All other language properties files would need to have a language suffix added for the language translations they include.  For example, the German properties file would be named OrderResources_de_DE.properties, and the French properties file would be named OrderResources_fr_FR.properties.
 
 
 
@@ -21,7 +21,7 @@ Open the default page at http://localhost:8080/locale-pop/ and press the "Open d
 
 
 
-
+If you do not wish to build & deploy the app and would just like to try it out, there may be a version running at: http://dev1rappex1:8027/locale-pop/
 
 
 
